# DKLGPR

./: CONFIDENCE_WEIGHTED_CLASSIFICATION.md  DKGPC.ipynb  DKGPR.ipynb  DKGPR_BEPS.ipynb  README.md  acquisition.py  pyproject.toml  requirements.txt  setup.py
dkgp/: __init__.py  acquisition.py  gppw.py  gpr.py  models.py  prediction.py  py.typed  sample_weighting.py  utils.py
dkgp.egg-info/: PKG-INFO  SOURCES.txt
engagegp/: gpc.py  gpr.py  utils.py
examples/: DKGPC.ipynb  ENGAGE_GPC.ipynb  __init__.py
src/deep_kernel_gp/: __init__.py  acquisition.py  models.py  prediction.py  training.py
src/dkgp/: __init__.py  classification.py  gpc.py  gpr.py  models.py
